<resources>
    <string name="app_name">My Home Application</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Phantom Von</string>
    <string name="nav_header_subtitle">p9691402@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_agents">Agents</string>
    <string name="menu_apartments">Apartments</string>
    <string name="menu_houses">Houses</string>
    <string name="menu_owners">Owners</string>
    <string name="menu_notifications">Notifications</string>
    <string name="menu_exit">Exit Now</string>
    <string name="title_activity_agents_trial">AgentsActivityTrial</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>